--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,6 @@
         <title>Spotify</title>
     </head>
 
-    <body>
-        <div id="root"></div>
-
-        <noscript>
-            You need to enable JavaScript to run this app.
-        </noscript>
-    </body>
+    <body></body>
 
 </html>
